--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -40,16 +40,13 @@
     <string id="30200">Enter password</string>
     <string id="30201">Confirm password</string>
     <string id="30202">Set password</string>
-    <string id="30203">Update RaspBMC on Reboot</string>
+    <string id="30203">Enable Auto-Update on Reboot</string>
     <string id="30204">Remove UI res limit (read FAQ)</string>
     <string id="30205">Enable Audio Engine (for USB soundcard support)</string>
     <string id="30206">Disable unsafe shut down warning</string>
     <string id="30207">Install and update kernel headers</string>
     <string id="30208">MAC address for Wake on LAN</string>
-    <string id="30250">Always (Notify)</string>
-    <string id="30251">Never</string>
-    <string id="30252">Notify only</string>
-    <string id="30253">Update Now</string>
+    <string id="30209">Notify me when update is available</string>
     <string id="30300">MPEG2 codec license</string>
     <string id="30301">VC1 codec key</string>
     <string id="30302">DTS codec key</string>
